--- a/06-kmeans/kmeans.ipynb
+++ b/06-kmeans/kmeans.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -7361,6 +7361,41 @@
     "dE2   <- dissE^2\n",
     "sk2   <- silhouette(km$cl, dE2)\n",
     "plot(sk2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cluster_list <- list()\n",
+    "for (i in 1:10) {\n",
+    "    cluster_list[[i]] <- kmeans(iris[,1:4], centers=i)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cluster_df <- NULL\n",
+    "for (i in 1:length(cluster_list)) {\n",
+    "    cluster_df <- rbind(cluster_df)\n",
+    "}"
    ]
   },
   {
